# bluez-gatt

./: CMakeLists.txt  README.md  thingy.c
libbluetooth/: CMakeLists.txt
libshared/: CMakeLists.txt
